--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -25,6 +25,7 @@ Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 \addversione{0.0.4}{12/01/2022}{Andrea Volpe}{Redazione}{Rimozione/aggiunta casi d'uso}
 \addversione{0.0.5}{16/01/2022}{Alberto Nicoletti}{Redazione}{Stesura primi requisiti}
 \addversione{0.0.6}{18/01/2022}{Andrea Volpe}{Redazione}{Stesura requisiti acquirente}
+\addversione{0.0.7}{21/01/2022}{Alberto Nicoletti}{Redazione e correzzione}{Riorganizzazione requisiti, aggiunta requisiti di vincolo e di qualità}
 
 \begin{document}
 
@@ -483,10 +484,10 @@ RFOX & Il sistema deve mostrare un messaggio di errore se la procedura di accett
 \hline
 RVOX & Utilizzo di blockchain pubblica & Obbligatorio & Capitolato, decisione interna \\
 \hline
-RVDX & utilizzo di Java e Angular per lo sviluppo delle parti di Back-end e di Front-end
+RVDX & Utilizzo di Java e Angular per lo sviluppo delle parti di Back-end e di Front-end
 della componente web application del sistema & Desiderabile &  Capitolato\\
 \hline
-RVDX & utilizzo di database Postgres & Desiderabile & Capitolato \\
+RVDX & Utilizzo di database Postgres & Desiderabile & Capitolato \\
 \hline
 \end{longtable}
 
@@ -510,7 +511,7 @@ RVDX & utilizzo di database Postgres & Desiderabile & Capitolato \\
 RQOX & Test che dimostrino il corretto funzionamento dei servizi e delle funzionalit`a previste,
 con una copertura minima dell’ 80\% correlata di report. & Obbligatorio & Capitolato\\
 \hline
-RQOX & documentazione su scelte implementative e progettuali effettuate, le relative motivazioni, i problemi aperti e le eventuali soluzioni proposte da esplorare. & Obbligatorio & Capitolato\\
+RQOX & Documentazione su scelte implementative e progettuali effettuate, le relative motivazioni, i problemi aperti e le eventuali soluzioni proposte da esplorare. & Obbligatorio & Capitolato\\
 \hline
 
 \end{longtable}
